logs/pyamp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyamp'...
Listing './lib/python3.5/site-packages/pyamp/config'...
Listing './lib/python3.5/site-packages/pyamp/documentation'...
Compiling './lib/python3.5/site-packages/pyamp/documentation/rstGeneration.py'...
***   File "./lib/python3.5/site-packages/pyamp/documentation/rstGeneration.py", line 410
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/logging'...
Compiling './lib/python3.5/site-packages/pyamp/logging/logger.py'...
***   File "./lib/python3.5/site-packages/pyamp/logging/logger.py", line 270
    keywords = map(lambda (k, v): "%s=%s" % (k, str(v)), kwargs.items())
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/networking'...
Listing './lib/python3.5/site-packages/pyamp/networking/sockets'...
Compiling './lib/python3.5/site-packages/pyamp/networking/sockets/connection.py'...
***   File "./lib/python3.5/site-packages/pyamp/networking/sockets/connection.py", line 62
    except socket_error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamp/networking/sockets/server.py'...
***   File "./lib/python3.5/site-packages/pyamp/networking/sockets/server.py", line 75
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/patterns'...
Listing './lib/python3.5/site-packages/pyamp/patterns/interfaces'...
Compiling './lib/python3.5/site-packages/pyamp/patterns/interfaces/interface.py'...
***   File "./lib/python3.5/site-packages/pyamp/patterns/interfaces/interface.py", line 161
    print "Parent message:", message
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyamp/processes'...
Listing './lib/python3.5/site-packages/pyamp/processes/threading'...
Compiling './lib/python3.5/site-packages/pyamp/processes/threading/thread.py'...
***   File "./lib/python3.5/site-packages/pyamp/processes/threading/thread.py", line 94
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/system'...
Listing './lib/python3.5/site-packages/pyamp/system/ubuntu'...
Listing './lib/python3.5/site-packages/pyamp/ui'...
Listing './lib/python3.5/site-packages/pyamp/ui/input'...
Compiling './lib/python3.5/site-packages/pyamp/ui/input/console.py'...
***   File "./lib/python3.5/site-packages/pyamp/ui/input/console.py", line 82
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamp/ui/input/evdev.py'...
***   File "./lib/python3.5/site-packages/pyamp/ui/input/evdev.py", line 54
    print dev
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyamp/ui/input/userInput.py'...
***   File "./lib/python3.5/site-packages/pyamp/ui/input/userInput.py", line 332
    print "Adding key:", selection
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyamp/ui/qt'...
Listing './lib/python3.5/site-packages/pyamp/util'...
Compiling './lib/python3.5/site-packages/pyamp/util/setup.py'...
***   File "./lib/python3.5/site-packages/pyamp/util/setup.py", line 62
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/web'...
Listing './lib/python3.5/site-packages/pyamp/web/html'...
Compiling './lib/python3.5/site-packages/pyamp/web/html/baseElement.py'...
***   File "./lib/python3.5/site-packages/pyamp/web/html/baseElement.py", line 211
    print d.toHtml()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamp/web/html/htmlPage.py'...
***   File "./lib/python3.5/site-packages/pyamp/web/html/htmlPage.py", line 99
    print html.toHtml()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp/web/http'...
Compiling './lib/python3.5/site-packages/pyamp/web/http/requests.py'...
***   File "./lib/python3.5/site-packages/pyamp/web/http/requests.py", line 80
    print "Loaded the following pages:"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyamp/web/http/server.py'...
***   File "./lib/python3.5/site-packages/pyamp/web/http/server.py", line 194
    print "Stopping!"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyamp/web/web.py'...
***   File "./lib/python3.5/site-packages/pyamp/web/web.py", line 49
    print getStackTrace()
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamp-1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './pyamp'...
Listing './pyamp/files'...
Listing './share'...
Listing './share/python-wheels'...
